@@ -37,6 +37,7 @@ import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 import org.apache.solr.client.solrj.SolrRequest;
+import org.apache.solr.common.SolrErrorWrappingException;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SpecProvider;
 import org.apache.solr.common.util.CommandOperation;
@@ -74,13 +75,13 @@ public class ApiBag {
   public synchronized List<Api> registerObject(Object o) {
     List<Api> l = AnnotatedApi.getApis(o);
     for (Api api : l) {
-      register(api, Collections.emptyMap());
+      register(api, Map.of());
     }
     return l;
   }
 
   public synchronized void register(Api api) {
-    register(api, Collections.emptyMap());
+    register(api, Map.of());
   }
 
   public synchronized void register(Api api, Map<String, String> nameSubstitutes) {
@@ -163,7 +164,7 @@ public class ApiBag {
         getCommands().put(entry.getKey(), entry.getValue());
       }
 
-      // Reference to Api must be saved to to merge uncached values (i.e. 'spec') lazily
+      // Reference to Api must be saved to merge uncached values (i.e. 'spec') lazily
       if (newCommandsAdded) {
         combinedApis.add(api);
       }
@@ -448,28 +449,10 @@ public class ApiBag {
     }
     List<Map<String, Object>> errs = CommandOperation.captureErrors(commandsCopy);
     if (!errs.isEmpty()) {
-      throw new ExceptionWithErrObject(
+      throw new SolrErrorWrappingException(
           SolrException.ErrorCode.BAD_REQUEST, "Error in command payload", errs);
     }
     return commandsCopy;
-  }
-
-  public static class ExceptionWithErrObject extends SolrException {
-    private final List<Map<String, Object>> errs;
-
-    public ExceptionWithErrObject(ErrorCode code, String msg, List<Map<String, Object>> errs) {
-      super(code, msg);
-      this.errs = errs;
-    }
-
-    public List<Map<String, Object>> getErrs() {
-      return errs;
-    }
-
-    @Override
-    public String getMessage() {
-      return super.getMessage() + ", errors: " + getErrs() + ", ";
-    }
   }
 
   public static class LazyLoadedApi extends Api {
