@@ -29,7 +29,6 @@ import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
@@ -170,7 +169,8 @@ public class V2HttpCall extends HttpSolrCall {
             if (action == REMOTEPROXY) {
               action = ADMIN_OR_REMOTEPROXY;
               coreUrl = coreUrl.replace("/solr/", "/solr/____v2/c/");
-              this.path = path = path.substring(prefix.length() + collectionName.length() + 2);
+              normalizeAndSetPath(path.substring(prefix.length() + collectionName.length() + 2));
+              path = this.path;
               return;
             }
           }
@@ -188,7 +188,8 @@ public class V2HttpCall extends HttpSolrCall {
       }
 
       Thread.currentThread().setContextClassLoader(core.getResourceLoader().getClassLoader());
-      this.path = path = path.substring(prefix.length() + pathSegments.get(1).length() + 2);
+      normalizeAndSetPath(path.substring(prefix.length() + pathSegments.get(1).length() + 2));
+      path = this.path;
       // Core-level API, so populate "collection" template val
       parts.put(COLLECTION_PROP, origCorename);
       Api apiInfo = getApiInfo(core.getRequestHandlers(), path, req.getMethod(), fullPath, parts);
@@ -486,7 +487,7 @@ public class V2HttpCall extends HttpSolrCall {
     // myColName -> collection
     final Map<String, String> pathTemplateValKey;
     if (pathTemplateKeyVal.isEmpty()) { // typical
-      pathTemplateValKey = Collections.emptyMap();
+      pathTemplateValKey = Map.of();
     } else if (pathTemplateKeyVal.size() == 1) { // typical
       Map.Entry<String, String> entry = pathTemplateKeyVal.entrySet().iterator().next();
       pathTemplateValKey = Map.of(entry.getValue(), entry.getKey());
