@@ -26,6 +26,7 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import org.apache.solr.client.solrj.cloud.SolrCloudManager;
@@ -387,7 +388,7 @@ public class DistributedClusterStateUpdater {
       // For now trying to diverge as little as possible from existing data structures and code
       // given the need to support both the old way (Overseer) and new way (distributed) of handling
       // cluster state update.
-      final Set<String> liveNodes = Collections.emptySet();
+      final Set<String> liveNodes = Set.of();
 
       // Per Replica States updates are done before all other updates and not subject to the number
       // of attempts of CAS made here, given they have their own CAS strategy and implementation
@@ -412,7 +413,7 @@ public class DistributedClusterStateUpdater {
         // state. Knowing about all collections in the cluster might not be needed.
         ClusterState initialClusterState;
         if (updater.isCollectionCreation()) {
-          initialClusterState = new ClusterState(liveNodes, Collections.emptyMap());
+          initialClusterState = new ClusterState(liveNodes, Map.of());
         } else {
           // Get the state for existing data in ZK (and if no data exists we should fail)
           initialClusterState = fetchStateForCollection();
@@ -552,7 +553,7 @@ public class DistributedClusterStateUpdater {
         if (updater.isCollectionCreation()) {
           // The state.json file does not exist yet (more precisely it is assumed not to exist)
           log.debug("going to create collection {}", jsonPath);
-          zkStateReader.getZkClient().create(jsonPath, stateJson, CreateMode.PERSISTENT, true);
+          zkStateReader.getZkClient().create(jsonPath, stateJson, CreateMode.PERSISTENT);
         } else {
           // We're updating an existing state.json
           if (log.isDebugEnabled()) {
@@ -561,9 +562,7 @@ public class DistributedClusterStateUpdater {
                 jsonPath,
                 collection.getZNodeVersion());
           }
-          zkStateReader
-              .getZkClient()
-              .setData(jsonPath, stateJson, collection.getZNodeVersion(), true);
+          zkStateReader.getZkClient().setData(jsonPath, stateJson, collection.getZNodeVersion());
         }
       }
     }
@@ -577,7 +576,7 @@ public class DistributedClusterStateUpdater {
     private ClusterState fetchStateForCollection() throws KeeperException, InterruptedException {
       String collectionStatePath = DocCollection.getCollectionPath(updater.getCollectionName());
       Stat stat = new Stat();
-      byte[] data = zkStateReader.getZkClient().getData(collectionStatePath, null, stat, true);
+      byte[] data = zkStateReader.getZkClient().getData(collectionStatePath, null, stat);
 
       // This factory method can detect a missing configName and supply it by reading it from the
       // old ZK location.
@@ -588,7 +587,7 @@ public class DistributedClusterStateUpdater {
           ZkClientClusterStateProvider.createFromJsonSupportingLegacyConfigName(
               stat.getVersion(),
               data,
-              Collections.emptySet(),
+              Set.of(),
               updater.getCollectionName(),
               zkStateReader.getZkClient(),
               Instant.ofEpochMilli(stat.getCtime()));
@@ -890,7 +889,7 @@ public class DistributedClusterStateUpdater {
 
       try {
         final List<String> collectionNames =
-            zkStateReader.getZkClient().getChildren(COLLECTIONS_ZKNODE, null, true);
+            zkStateReader.getZkClient().getChildren(COLLECTIONS_ZKNODE, null);
 
         // Collections are totally independent of each other. Multiple threads could share the load
         // here (need a ZK connection for each though).
