@@ -34,7 +34,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Stream;
-import org.apache.solr.client.solrj.SolrQuery;
+import org.apache.solr.client.solrj.request.SolrQuery;
 import org.apache.solr.client.solrj.response.QueryResponse;
 import org.apache.solr.cloud.SolrCloudTestCase;
 import org.apache.solr.common.SolrDocumentList;
@@ -124,7 +124,7 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
     String mutableId = getMutableId(configSet);
     assertFalse(cc.getZkController().getClusterState().hasCollection(mutableId));
     SolrZkClient zkClient = cc.getZkController().getZkClient();
-    assertFalse(zkClient.exists("/configs/" + mutableId, true));
+    assertFalse(zkClient.exists("/configs/" + mutableId));
   }
 
   @Test
@@ -164,7 +164,7 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
             ENABLE_DYNAMIC_FIELDS_PARAM, true,
             ENABLE_FIELD_GUESSING_PARAM, true,
             ENABLE_NESTED_DOCS_PARAM, false,
-            LANGUAGES_PARAM, Collections.emptyList());
+            LANGUAGES_PARAM, List.of());
     assertDesignerSettings(expSettings, rsp.getValues());
     SolrParams rspData = rsp.getValues().toSolrParams();
     int schemaVersion = rspData.getInt(SCHEMA_VERSION_PARAM);
@@ -348,7 +348,7 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
             ENABLE_DYNAMIC_FIELDS_PARAM, true,
             ENABLE_FIELD_GUESSING_PARAM, true,
             ENABLE_NESTED_DOCS_PARAM, false,
-            LANGUAGES_PARAM, Collections.emptyList(),
+            LANGUAGES_PARAM, List.of(),
             COPY_FROM_PARAM, "_default");
     assertDesignerSettings(expSettings, rsp.getValues());
 
@@ -516,7 +516,7 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
             ENABLE_DYNAMIC_FIELDS_PARAM, false,
             ENABLE_FIELD_GUESSING_PARAM, false,
             ENABLE_NESTED_DOCS_PARAM, false,
-            LANGUAGES_PARAM, Collections.emptyList(),
+            LANGUAGES_PARAM, List.of(),
             COPY_FROM_PARAM, "_default");
     assertDesignerSettings(expSettings, rsp.getValues());
 
@@ -687,7 +687,7 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
     String mutableId = getMutableId(configSet);
     assertFalse(cc.getZkController().getClusterState().hasCollection(mutableId));
     SolrZkClient zkClient = cc.getZkController().getZkClient();
-    assertFalse(zkClient.exists("/configs/" + mutableId, true));
+    assertFalse(zkClient.exists("/configs/" + mutableId));
 
     SolrQuery query = new SolrQuery("*:*");
     query.setRows(0);
