@@ -18,7 +18,6 @@ package org.apache.solr.handler.extraction;
 
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayDeque;
-import java.util.Collections;
 import java.util.Deque;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -92,7 +91,7 @@ public class SolrContentHandler extends DefaultHandler implements ExtractingPara
         fieldBuilders.put(captureFields[i], new StringBuilder());
       }
     } else {
-      fieldBuilders = Collections.emptyMap();
+      fieldBuilders = Map.of();
     }
     bldrStack.add(catchAllBuilder);
   }
